added markup, styles

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     @@include('html/head.html', { "title": "Главная" })
     <body>
         <!-- @@include('html/footer.html', {}) -->
+        <div class="page">@@include('html/header.html', {})</div>
         <script src="js/app.min.js"></script>
     </body>
 </html>
