--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.min.css" />
-    <title>Главная</title>
-</head>
-
-    <body>
-        
-        <div class="page"><header class="header page__header">
+<header class="header page__header">
     <div class="page__box">
         <div class="header__box">
             <div class="header__logo logo">
@@ -39,7 +27,3 @@
         </div>
     </div>
 </header>
-</div>
-        <script src="js/app.min.js"></script>
-    </body>
-</html>
