added section with brands

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -65,8 +65,10 @@
         </div>
         <div class="header__logo logo">
             <a href="/">
-                <div class="icon-box">
-                    <img src="img/icons/icons.svg#logo" class="svg-logo-dims" alt="logo" />
+                <div>
+                    <svg class="header__img">
+                        <use xlink:href="@img/icons/icons.svg#logo"></use>
+                    </svg>
                 </div>
             </a>
         </div>
