--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,11 @@
                     <section class="hero header__hero">
                         <div class="hero__img">
                             <img
-                                src="img/icons/icons.svg#hero_home"
+                                src="@img/icons/icons.svg#hero_home"
                                 class="svg-hero_home-dims"
                                 alt="hero_home"
                             />
                         </div>
-
                         <div class="hero__content">
                             @@include('html/homeHero.html', {"title": " We build products to\
                             simplify work for businesses", 'text': "Our next-gen products empower\
@@ -28,6 +27,10 @@
                     </section>
                 </div>
             </header>
+            <main>
+                @@include('html/brands.html', {})
+                <div class="divider"></div>
+            </main>
         </div>
         <script src="js/app.min.js"></script>
     </body>
