added info section, adaptive layout

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <main>
                 @@include('html/brands.html', {})
                 <div class="divider"></div>
-                @@include('html/products.html', {})
+                @@include('html/products.html', {}) @@include('html/info.html', {})
             </main>
         </div>
         <script src="js/app.min.js"></script>
