added swiper for innovation section

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     @@include('html/head.html', { "title": "Главная" })
     <body>
         <!-- @@include('html/footer.html', {}) -->
-        <div class="page">
+        <div class="page page__swiper">
             <header class="header page__header">
                 @@include('html/header.html', {})
                 <div class="page__box">
@@ -31,6 +31,7 @@
                 @@include('html/brands.html', {})
                 <div class="divider"></div>
                 @@include('html/products.html', {}) @@include('html/info.html', {})
+                @@include('html/innovation.html', {})
             </main>
         </div>
         <script src="js/app.min.js"></script>
