added info2 section, adaptive layout

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                 @@include('html/brands.html', {})
                 <div class="divider"></div>
                 @@include('html/products.html', {}) @@include('html/info.html', {})
-                @@include('html/innovation.html', {})
+                @@include('html/innovation.html', {}) @@include('html/info2.html', {})
             </main>
         </div>
         <script src="js/app.min.js"></script>
