--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     @@include('html/head.html', { "title": "Главная" })
     <body>
-        <!-- @@include('html/footer.html', {}) -->
         <div class="page page__swiper">
             <header class="header page__header">
                 @@include('html/header.html', {})
@@ -33,6 +32,7 @@
                 @@include('html/products.html', {}) @@include('html/info.html', {})
                 @@include('html/innovation.html', {}) @@include('html/info2.html', {})
             </main>
+            @@include('html/footer.html', {})
         </div>
         <script src="js/app.min.js"></script>
     </body>
