added sticky navbar, change header components, added new file for burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
     @@include('html/head.html', { "title": "Главная" })
     <body>
         <div class="page page__swiper">
+            @@include('html/header.html', {})
             <header class="header page__header">
-                @@include('html/header.html', {})
+                @@include('html/burgerMenu.html', {})
                 <div class="page__box">
                     <section class="hero header__hero">
                         <div class="hero__img">
