--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,68 +1,5 @@
-<div class="page__box">
-    <div class="header__box">
-        <button class="burger-menu__open-btn" id="burger-menu-open">
-            <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-            >
-                <path
-                    d="M3 12H21"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                />
-                <path d="M3 6H21" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                    d="M3 18H21"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                />
-            </svg>
-        </button>
-        <div class="burger-menu" id="burger-menu">
-            <div class="burger-menu__header">
-                <div class="burger-menu__container">
-                    <button class="burger-menu__close-btn" id="burger-menu-close">
-                        <svg
-                            width="37"
-                            height="37"
-                            viewBox="0 0 37 37"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                        >
-                            <path
-                                d="M18 6L6 18"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                            />
-                            <path
-                                d="M6 6L18 18"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                            />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-            <div class="burger-menu__body">
-                <div class="burger-menu__container">
-                    <div class="burger-menu__menu">
-                        <nav class="burger-menu__main">
-                            <a href="/">Products</a>
-                            <a href="/">About us</a>
-                            <a href="/">Contact</a>
-                            <a href="/">We're hiring</a>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
+<nav class="navbar_sticky">
+    <div class="navbar__container">
         <div class="header__logo logo">
             <a href="/">
                 <div>
@@ -72,21 +9,19 @@
                 </div>
             </a>
         </div>
-        <nav>
-            <ul class="navbar header__navbar">
-                <a href="" class="navbar__link">
-                    <li class="navbar__item">Products</li>
-                </a>
-                <a href="" class="navbar__link">
-                    <li class="navbar__item">About us</li>
-                </a>
-                <a href="" class="navbar__link">
-                    <li class="navbar__item">Contact</li>
-                </a>
-                <button class="button navbar__button">
-                    <li class="navbar__item">We're hiring</li>
-                </button>
-            </ul>
-        </nav>
+        <ul class="navbar header__navbar">
+            <a href="" class="navbar__link">
+                <li class="navbar__item">Products</li>
+            </a>
+            <a href="" class="navbar__link">
+                <li class="navbar__item">About us</li>
+            </a>
+            <a href="" class="navbar__link">
+                <li class="navbar__item">Contact</li>
+            </a>
+            <button class="button navbar__button">
+                <li class="navbar__item">We're hiring</li>
+            </button>
+        </ul>
     </div>
-</div>
+</nav>
