--- a/src/html/burgerMenu.html
+++ b/src/html/burgerMenu.html
@@ -1,5 +1,14 @@
 <div class="page__box">
     <div class="header__box">
+        <div class="header__logo logo">
+            <a href="/">
+                <div>
+                    <svg class="header__img">
+                        <use xlink:href="@img/icons/icons.svg#logo"></use>
+                    </svg>
+                </div>
+            </a>
+        </div>
         <button class="burger-menu__open-btn" id="burger-menu-open">
             <svg
                 width="24"
