--- a/src/html/burgerMenu.html
+++ b/src/html/burgerMenu.html
@@ -1,6 +1,6 @@
 <div class="page__box">
     <div class="header__box">
-        <div class="header__logo logo">
+        <div class="header__logo logo burger-menu__logo">
             <a href="/">
                 <div>
                     <svg class="header__img">
