replacing the logo in footer

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -5,7 +5,7 @@
                 <a href="/">
                     <div>
                         <svg class="header__img">
-                            <use xlink:href="@img/icons/icons.svg#logo"></use>
+                            <use xlink:href="@img/icons/icons.svg#logo_footer"></use>
                         </svg>
                     </div>
                 </a>
