--- a/src/html/header.html
+++ b/src/html/header.html
@@ -10,18 +10,12 @@
             </a>
         </div>
         <ul class="navbar header__navbar">
-            <a href="" class="navbar__link">
-                <li class="navbar__item">Products</li>
-            </a>
-            <a href="" class="navbar__link">
-                <li class="navbar__item">About us</li>
-            </a>
-            <a href="" class="navbar__link">
-                <li class="navbar__item">Contact</li>
-            </a>
-            <button class="button navbar__button">
-                <li class="navbar__item">We're hiring</li>
-            </button>
+            <li class="navbar__item"><a href="" class="navbar__link">Products</a></li>
+            <li class="navbar__item"><a href="" class="navbar__link">About us</a></li>
+            <li class="navbar__item"><a href="" class="navbar__link">Contact</a></li>
+            <li class="navbar__item">
+                <button class="button navbar__button">We're hiring</button>
+            </li>
         </ul>
     </div>
 </nav>
